init remote registry

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "就业中心插件",
+    "name": "__MSG_appName__",
     "version": "1.0.0",
-    "description": "辅助业务人员智能审批业务",
+    "description": "__MSG_appDescription__",
     "manifest_version": 3,
     "background": {
         "service_worker": "static/js/background.js"
@@ -23,9 +23,14 @@
     "permissions": [
         "storage",
         "contextMenus",
-        "tabs"
+        "tabs",
+        "webRequest",
+        "sidePanel"
     ],
     "host_permissions": [],
+    "side_panel": {
+        "default_path": "sidePanel.html"
+    },
     "web_accessible_resources": [
         {
             "resources": [
@@ -36,21 +41,21 @@
             ]
         }
     ],
-    "default_locale": "zh_CN",
     "action": {
         "default_popup": "index.html",
         "default_icon": {
-            "16": "images/employ_icon.png",
-            "32": "images/employ_icon.png",
-            "48": "images/employ_icon.png",
-            "128": "images/employ_icon.png"
+            "16": "images/yami.png",
+            "32": "images/yami.png",
+            "48": "images/yami.png",
+            "128": "images/yami.png"
         },
-        "default_title": "就业中心小助手"
+        "default_title": "forty extension summary"
     },
     "icons": {
-        "16": "images/employ_icon.png",
-        "32": "images/employ_icon.png",
-        "48": "images/employ_icon.png",
-        "128": "images/employ_icon.png"
-    }
+        "16": "images/yami.png",
+        "32": "images/yami.png",
+        "48": "images/yami.png",
+        "128": "images/yami.png"
+    },
+    "default_locale": "zh_CN"
 }
