--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
+    "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.18",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@rematch/core": "^2.2.0",
@@ -53,7 +54,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-refresh": "^0.11.0",
-    "react-router-dom": "^6.22.1",
+    "react-router-dom": "^6.24.0",
     "redux": "^5.0.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
@@ -149,6 +150,10 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.2"
   }
 }
